[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/ModsMenu/ModsMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/FontResources/Normal/BoldFont.tres" type="DynamicFont" id=2]

[node name="ModsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 20 )
custom_constants/margin_right = 0
custom_constants/margin_top = 40
custom_constants/margin_left = 0

[node name="RichTextLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer2"]
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "MODS"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 1280.0
margin_bottom = 72.0

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 1280.0
margin_bottom = 97.0

[node name="Warning" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3"]
margin_right = 1280.0
margin_bottom = 21.0
custom_fonts/bold_font = ExtResource( 2 )
bbcode_enabled = true
fit_content_height = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 1280.0
margin_bottom = 105.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 1280.0
margin_bottom = 150.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="ModsLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 31.0
focus_mode = 2
custom_fonts/bold_font = ExtResource( 2 )
bbcode_enabled = true
fit_content_height = true
selection_enabled = true

[node name="ImportModDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Открыть файл"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.zip, *.pck ; Mod file" )

[node name="ModAcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.0
margin_top = -44.5
margin_right = 207.0
margin_bottom = 44.5
window_title = "New mod"
dialog_text = "Restart the game to see the mod"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.5
margin_top = -58.0
margin_right = 211.5
margin_bottom = 58.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Подтверждение..."
dialog_text = "This will remove all mods in your mods folder. Are you sure?

Restart the game to let the action take effect"

[node name="AndroidPathAlert" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.5
margin_top = -57.0
margin_right = 247.5
margin_bottom = 57.0
window_title = "Внимание!"

[connection signal="file_selected" from="ImportModDialog" to="." method="_on_ImportModDialog_file_selected"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
